<resources>
    <string name="app_name">SACO</string>
    <string name="smart_air_conditioner_operation">Smart Air Conditioner Operation</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="loginButton">Login</string>
    <string name="SignUpScreenSignUp">Sign Up</string>
    <string name="signUpScreenUsernameText">Username</string>
    <string name="signUpScreenUsernameInput">Enter your username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here!</string>
    <string name="home">Home</string>
    <string name="energy">Energy</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mr_guest" translatable="false">Mr. Guest</string>
    <string name="security">Security</string>
    <string name="usericon" translatable="false">usericon</string>
    <string name="log_out">Log Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="metric">Metric</string>
    <string name="language">Language</string>
    <string name="mr_guest_dummymail_com" translatable="false">mr_guest@dummymail.com</string>
    <string name="other">Other</string>
    <string name="two_step_verification">Two Step Verification</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirmlogout">Confirm Logout</string>
    <string name="areyousure">Are you sure you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_mr_guest">Hello, Mr. Guest</string>
    <string name="welcome_to_guest_home">Welcome to Guest Home</string>
    <string name="hello_format">Hello, %s</string>
    <string name="welcome_format">Welcome to %s\'s home</string>
    <string name="room">Room</string>
    <string name="bedroom_x">Bedroom %d</string>
    <string name="room_is_hot">(Room is Hot)</string>
    <string name="room_is_cold">(Room is Cold)</string>
    <string name="living_room">Living Room</string>
    <string name="tips_for_saving_energy">Tips for Saving Energy</string>
    <string name="tip1">Tip 1: Turn on the AC only when necessary.</string>
    <string name="tip2">Tip 2: Turn off the AC immediately when not in use.</string>
    <string name="tip3">Tip 3: Do regular AC maintanance, such as cleaning it.</string>
    <string name="current_password">Current Password</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="DeleteConfirmation">Delete your account?</string>
    <string name="DeleteAccountDialog">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="DeleteAccountButton">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="verifyidentity">Verify Identity</string>
    <string name="confirmdeletion">Enter your password to confirm deletion</string>
    <string name="verify">verify</string>
    <string name="requiredpassword">Password is required</string>
    <string name="editusername">Edit username</string>
    <string name="Update">Update</string>
    <string name="usernamecantbeempty">Username can\'t be empty</string>
    <string name="usernameupdatesuccess">Username updated</string>
    <string name="usernameupdatefail">Failed to update username</string>
    <string name="english">English</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="celsius" translatable="false">Celsius</string>
    <string name="farenheit" translatable="false">Fahrenheit</string>
    <string name="kelvin" translatable="false">Kelvin</string>
    <string name="SACOinformation">Smart Air Conditioner Operation or better known as SACO is a Wi-Fi connected IoT that help you control the temperature of rooms in your house and track electricity usage remotely.</string>
    <string name="SACOnumber" translatable="false">08XXXXXXXX</string>
    <string name="SACOsupport" translatable="false">Support@SACO</string>
    <string name="number_of_schedules">Number of schedules</string>
    <string name="strip">-</string>
    <string name="letterC">C</string>
    <string name="letterSu">Su</string>
    <string name="letterM">M</string>
    <string name="letterTu">Tu</string>
    <string name="letterW">W</string>
    <string name="letterTh">Th</string>
    <string name="letterF">F</string>
    <string name="letterSa">Sa</string>
    <string name="devices">Number of devices</string>
    <string name="today">Today</string>
    <string name="onforxhours">On for %d hours</string>
    <string name="off">Off</string>
    <string name="onforxminutes">on for %d minutes</string>
    <string name="yesterday">Yesterday</string>
    <string name="date">%s</string>
    <string name="xdaysago">%d Days Ago</string>
    <string name="deviceCount">%d</string>
    <string name="schedulecount">%d</string>
    <string name="manage_room">Manage Room</string>
    <string name="userinput">%s</string>
    <string name="manage_schedule">Manage Schedule</string>
    <string name="editdevice">Edit Device</string>
    <string name="savebutton">Save</string>
    <string name="DeviceNameEmpty">Device name cannot be empty</string>
    <string name="ErrorDevice">Error editing device.</string>
    <string name="FeatureScheduled">Feature scheduled for next update</string>
    <string name="DataNotAvailable">Energy usage not available (future update)</string>
    <string name="Logintoadd">Login to add IoT device</string>
    <string name="addnewdevice">Add new IoT device</string>
    <string name="deviceID">Enter your IoT device ID</string>
    <string name="add">Add</string>
    <string name="mustbenumber">ID must be numbers</string>
    <string name="IDcantbeempty">ID cannot be empty</string>
    <string name="devicealreadylinked">This ID is already linked to your account</string>
    <string name="deviceusedbyother">Someone else already claimed this ID</string>
    <string name="unexpectederror">Unexpected error, please retry</string>
    <string name="devicename">Enter new IoT device name</string>
    <string name="updatefail">Failed to update</string>
    <string name="updatesuccess">Updated successfully</string>
    <string name="addfail">Failed to add IoT device</string>
    <string name="addsuccess">Successfully added new IoT device</string>
    <string name="ID" translatable="false">ID: %1$s</string>
    <string name="IDnotavailable" translatable="false">ID: N/A</string>
    <string name="deletedevice">Delete IoT device</string>
    <string name="deleteconfirmation">Are you sure you want to delete</string>
    <string name="deletefail">Failed to delete IoT device</string>
    <string name="deleted">deleted</string>
    <string name="deleteIoTerror">Error deleting IoT device</string>
    <string name="errorediting">Error trying to edit IoT device</string>
    <string name="failloading">Failed to load IoT device(s)</string>
    <string name="nodevice">No IoT device found</string>
    <string name="temperatureupdated">Temperature Updated!</string>
    <string name="mustlogin">Must be logged in to perform this action</string>
    <string name="enterbothemailandpass">Please enter both email and password</string>
    <string name="authenticationsuccess">Authentication successful</string>
    <string name="temperaturesetC">Temperature set to Celsius</string>
    <string name="temperaturesetF">Temperature set to Fahrenheit</string>
    <string name="temperaturesetK">Temperature set to Kelvin</string>
    <string name="required">All fields are required</string>
    <string name="passwordnotmatch">Password do not match</string>
    <string name="passwordminimallength">Password must be at least 6 characters long</string>
    <string name="passwordupdatesuccess">Password updated successfully</string>
    <string name="accountdeleted">Account successfully deleted!</string>
    <string name="enterpasswordagain">Please re-enter your password to delete your account</string>
</resources>